# grants-product-and-delivery

./: README.md
.github/ISSUE_TEMPLATE/: 1_internal_task.yml  2_lucas_task.md  new-task.md
api/: README.md
automations/: .gitignore  README.md
automations/product_strategy_metrics/: README.md  calculate_metrics.py  getDeliverableData.graphql  run.sh
documentation/decisions/: README.md
documentation/wiki/: file-to-include.md
forms_analysis/: .gitignore  FormMetadata.csv  README.md  pyproject.toml
forms_analysis/forms_analysis/: fetch.py  join_csvs.py  load.py  parse.py  scraper.py  scrapper.py
